syntax = "proto3";
package dbmodel

message Model {
    int64 created = 1;//创建时间，时间戳秒
    int64 updated = 2;//修改时间，
}

message SysUser {//用户表
    int64 id = 1;
    string user_name = 2;
    string true_name = 3;
    string user_phone = 4;
    string user_wx = 5;
    string user_email = 6;
    string qq = 7;
    string user_tel = 8;
    string balance = 10;
    string id_card = 11;

    
    int64 created = 1;//创建时间，时间戳秒
    int64 updated = 2;//修改时间
    
    //===敏感字段不返还前端
    string wx_open_id = 9;
    string user_password = 12;
    //Model Model=999;
}
